@@ -27,7 +27,12 @@ if [[ -d "/usr/lib/jvm/java-10-openjdk" ]]; then
   export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 fi
 
-if [[ "$os" == "Ubuntu" ]]; then
+if [[ -d "/usr/lib/jvm/java-11-openjdk-amd64" ]]; then
+  export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
+  # export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+fi
+
+if [[ "$os" == "\"Ubuntu"\" ]]; then
   source /usr/share/doc/fzf/examples/key-bindings.zsh
 fi
 
